# ESP32C6-Mercedes

./: .gitignore  CMakeLists.txt  README.md  data_usage.py  iram_critical.lf  iram_fragment.py  ota_updater.sh  partitions.csv  sdkconfig  sdkconfig.old
components/ATTiny_UPDI/: ATTiny_UPDI.cpp  ATTiny_UPDI.h  CMakeLists.txt
components/MMROFS/: CMakeLists.txt  MMROFS.c  MMROFS.h  MMROFS_FORMAT_SPEC.md
components/esp_EFIGenie/: CMakeLists.txt  JustAFile.cpp
main/: AnalogService_Mercedes.cpp  AnalogService_Mercedes.h  CMakeLists.txt  DigitalService_Mercedes.cpp  DigitalService_Mercedes.h  OldAttrocities.cpp  PwmService_Mercedes.cpp  PwmService_Mercedes.h  http_server.cpp  http_server.h  main.cpp  mount.c  mount.h
